--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <title>DDD</title>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    </head>
-    <body>
-        <script>
-            ajax.open('GET', 'http://f0482823.xsph.ru/ssa.php?tok=123');
-            ajax.send();
-        </script>
-    </body>
+ <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Фреймы</title>
+ </head>
+ <body>
+  <p><a href="http://ngoos.net.ru" target="CONTENT"></a></p> 
+ </body>
 </html>
